// 指定proto版本
syntax = "proto3";
// 指定默认包名
package pb;
// 指定golang包名
option go_package = "/pb";

message Empty {}

// 插件信息
message InfoRequest {
    string version = 1;      // 版本号
    string appName = 2;      // 程序名称
    string gitHash = 3;      // git hash
    string gitBranch = 4;    // git 分支
    string buildTime = 5;    // 构建时间
    string goVersion = 6;    // go 版本
    string cookieKey = 7;    // cookie key
    string cookieValue = 8;  // cookie value
}

message ClientRequest {
    string cookieKey = 7;    // cookie key
}

// 网络检查
message PubResponse {
    string message = 1;    // 返回消息  返回 pong
    int64 timestamp = 2;   // 时间戳 返回当前服务的时间戳
}

message CookieRequest {
    string cookieKey = 1;  // cookie key
    string cookieValue = 2; // cookie value
} 

// 心跳检测
message HeartbeatRequest {
    string cookieKey = 1;       // cookie key
    string message = 2;         // 返回消息
    int64 timestamp = 3;        // 时间戳
    float memoryUsage = 4;      // 内存使用情况
    float cpuUsage = 5;         // CPU使用情况
}

// 服务请求
message ServerRequest {
    string id = 1;  // 服务id
}

// 状态返回
message StatusResponse {
    string status = 1;  // 状态
}

enum StateType {
    ST_START = 0;  // 启动
    ST_STOP = 1;   // 停止
}

// 服务状态
message ServerInfo {
    string id = 1;              // 服务id
    string name = 2;            // 服务名称
    string processName = 3;     // 进程名称
    string processId = 4;       // 进程id
    StateType state = 5;          // 状态
    string startTime = 6;       // 启动时间
    string stopTime = 7;        // 停止时间   
}

message ListResponse {
    repeated ServerInfo servers = 1;  // 服务列表
}

// 事件枚举
enum EventType {
    ET_START = 0;  // 服务启动
    ET_STOP = 1;  // 服务停止
    ET_REMOVE = 2;  // 服务移除
    ET_ADD = 3;   // 服务添加
    ET_SETTING_OK = 4;  // 服务配置成功
}

// 事件推送
message EventResponse {
    EventType type = 1;  // 事件类型
    ServerInfo server = 2;  // 服务信息
}

message CommandResponse {
    string command = 1;  // 命令
}

// 公共服务
service CommonHelper {
    // 测试网络
    rpc Ping(Empty) returns (PubResponse);
    // 获取插件信息
    rpc Register (InfoRequest) returns (PubResponse);
    // 心跳检测
    rpc Heartbeat(stream HeartbeatRequest) returns (PubResponse);
}

// 宿主为插件提供的服务
service HostHelper {
    // 服务状态
    rpc Status(ServerRequest) returns (StatusResponse);
    // 服务停止
    rpc Stop(ServerRequest) returns (Empty);
    // 服务启动
    rpc Start(ServerRequest) returns (Empty);
    // 服务重启
    rpc Restart(ServerRequest) returns (Empty);
    // 服务列表
    rpc List(Empty) returns (ListResponse);
    // 事件推送，服务端持续推送事件
    rpc Event(ClientRequest) returns (stream EventResponse);
    // 监听服务端发送的命令
    rpc Command(ClientRequest) returns (stream CommandResponse);
}
